chore: configure lsp for nodejs & nix & lua

--- a/home-manager/modules/aerospace/config.toml
+++ b/home-manager/modules/aerospace/config.toml
@@ -38,7 +38,7 @@ outer.right =      6
 alt-n = 'exec-and-forget ~/.nix-profile/bin/apply-theme'
 
 # Launch applications
-alt-shift-enter = 'exec-and-forget open -na kitty'
+alt-shift-enter = 'exec-and-forget /run/current-system/sw/bin/zsh -c kitty'
 alt-shift-b = 'exec-and-forget open -a "Brave Browser"'
 alt-shift-t = 'exec-and-forget open -a "Telegram"'
 alt-shift-f = 'exec-and-forget open -a Finder'
