chore: fix aerospace

--- a/home-manager/modules/aerospace/config.toml
+++ b/home-manager/modules/aerospace/config.toml
@@ -35,7 +35,7 @@ outer.right =      6
 # Main mode bindings
 [mode.main.binding]
 # Switch themes
-alt-n = 'exec-and-forget ~/.nix-profile/bin/apply-theme'
+alt-n = 'exec-and-forget /run/current-system/sw/bin/zsh -c ~/.nix-profile/bin/apply-theme'
 
 # Launch applications
 alt-shift-enter = 'exec-and-forget /run/current-system/sw/bin/zsh -c kitty'
